--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -60,12 +60,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="自动登录" />
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:alpha="1">
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="1"
         android:text="@string/login" />
+        <ProgressBar
+            android:id="@+id/login_progressBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="70dp"
+            android:visibility="invisible"
+            />
+</RelativeLayout>
 </LinearLayout>
 </RelativeLayout>
