--- a/app/src/main/res/layout/fragment_item2.xml
+++ b/app/src/main/res/layout/fragment_item2.xml
@@ -25,6 +25,7 @@
         android:paddingEnd="20dp"
         android:paddingStart="20dp">
         <ImageView
+            android:id="@+id/iv_item2_search"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:adjustViewBounds="true"
