--- a/app/src/main/res/layout/fragment_userinfo.xml
+++ b/app/src/main/res/layout/fragment_userinfo.xml
@@ -10,28 +10,37 @@
         android:id="@+id/info_civ"
         android:layout_centerInParent="true"/>
 
-
-
     <Button
         android:id="@+id/cache"
-        android:layout_above="@+id/exit"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="@string/clearcache"
         android:textColor="#ffffff"
         android:background="#66CD00"
         android:alpha="0.6"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginBottom="8dp"
+        android:layout_above="@+id/exit"
+        android:layout_centerHorizontal="true" />
     <Button
         android:id="@+id/exit"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:background="#66CD00"
         android:textColor="#ffffff"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="26dp"
         android:text="@string/exit"
         android:alpha="0.6"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_alignStart="@+id/exit_currentuser" />
+    <Button
+        android:id="@+id/exit_currentuser"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="#66CD00"
+        android:textColor="#ffffff"
+        android:text="@string/exit_currentuser"
+        android:alpha="0.6"
+        android:layout_above="@+id/cache"
+        android:layout_alignStart="@+id/cache"
+        android:layout_marginBottom="11dp" />
 </RelativeLayout>
